--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<a href="a">Menu</a>
 					</li>
 					<li>
-						<a href="a">Projetos</a>
+						<a href="aba-projetos.html">Projetos</a>
 					</li>
 					<li>
 						<a href="a">Serviços</a>
