--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<style>
 		body{
+	color:black;
 	display: flex;
 	justify-content:center;
 	align-items: center;
@@ -12,10 +13,9 @@
 .box{
 	font-size: 20px;
 	color: white;
-	height: 250px;
-	width: 350px;
+	height: 844px;
+	width: 390px;
 	border-radius: 10px;
-	background: #191919;
 	flex-direction: column;
 	display: flex;
 	align-items: center;
