--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<style>
 		body{
-	color:black;
+			background: black;
 	display: flex;
 	justify-content:center;
 	align-items: center;
@@ -11,7 +11,8 @@
 }
 
 .box{
-	font-size: 20px;
+	background: rgb(60, 0, 90);
+	font-size: 25px;
 	color: white;
 	height: 844px;
 	width: 390px;
@@ -30,10 +31,15 @@
 
 }
 button{
-	height: 30px;
+	font-size: 15px;
+	border-radius: 20px;
+}
+
+button{
+	height: 40px;
 	width: 50px;
 	background: white;
-	border-radius: 5px;
+	border-radius: 10px;
 	color: blue;
 	font-weight: 600;
 }
@@ -41,9 +47,9 @@ button{
 </head>
 <body>
 	<div class="box">
-		<p>
-			vamo da uma voltinha hoje?
-		</p>
+		
+			<p>vamo da uma volta hoje?</p>
+		
 		<div class="buttons-container">
 			<button>
 				<a href="">sim</a>
