--- a/aba-projetos.html
+++ b/aba-projetos.html
@@ -3,17 +3,42 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>projetos</title>
 </head>
 <body>
-	<h1>
-		projetos 
+	<div class="backgroud">
+		<header>
+			<div class="logo">
+					<i class="fa-regular fa-m">M</i>
+			</div>
+			<div class="cabecalho">
+				<li>
+					<a href="https://mamandrak.github.io/portfolio-marcos/">menu</a>
+				</li>
+				<li>
+					<a href="a">projetos</a>
+				</li>
+				<li>
+					<a href="a">serviços</a>
+				</li>
+				<button>
+					meu contato
+				</button>	
+			</div>
+		</header>
+		<div class="textos-1">
+		<h1 class="titulo-projetos">
+		Projetos 
 	</h1>
 	<p>
-		aqui estao alguns projetos que eu criei
+		Aqui estao alguns projetos que eu criei
 	</p>
 	<br>
-	<a href="https://mamandrak.github.io/portfolio-marcos/">projeto portfolio</a>
+	<a class="link-portfolio" href="https://mamandrak.github.io/portfolio-marcos/">projeto portfolio</a>
 
+	</div>
+	</div>
+	
 </body>
 </html>
