--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" 
 	content="width=device-width,
 	 initial-scale=1">
-	 <link rel="stylesheet" type="text/css" href="./css/estilo.css">
+	 <link rel="stylesheet" type="text/css" href="estilo.css">
 	 <link rel="stylesheet" type="text/css" href="responsivo.css">
 	 <script type="text/javascript" src="./js/scrip.js"></script>
 	<title>x-men</title>
