--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ button{
 		</p>
 		<div class="buttons-container">
 			<button>
-				<a href="https://api.whatsapp.com/send/?phone=5518997751017&text=vamos+kk&type=phone_number&app_absent=0">sim</a>
+				<a href="https://api.whatsapp.com/send/?phone=5518997751017&text=vamos+kkkkk&type=phone_number&app_absent=0">sim</a>
 			</button>
 			<button id="no">nao</button>
 		</div>
