--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ button{
 <body>
 	<div class="box">
 		<p>
-			Vamos viver um romance 9vinha?
+			Vamos ficar rico cara??
 		</p>
 		<div class="buttons-container">
 			<button>
-				<a href="https://api.whatsapp.com/send/?phone=5518997751017&text=vamos+kkkkk&type=phone_number&app_absent=0">sim</a>
+				<a href="https://api.whatsapp.com/send/?phone=5518997751017&text=MARCHA&type=phone_number&app_absent=0">sim</a>
 			</button>
 			<button id="no">nao</button>
 		</div>
