--- a/indexx.html
+++ b/indexx.html
@@ -42,7 +42,7 @@ button{
 <body>
 	<div class="box">
 		<p>
-			Vamos viver um romance 9vinha?
+<!-- 			Vamos ficar rico cara?
 		</p>
 		<div class="buttons-container">
 			<button>
